# goit-pyweb-hw-13-django

./: .gitignore  README.md  pyproject.toml  requirements.txt
hw_project/: README.md'  config.ini
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_author_mongo_id.py  0003_alter_quote_author.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  index.html
hw_project/quotes/templatetags/: extract.py  extract.py~
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_confirm.html  password_reset_done.html
hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py
