[tool.poetry]
name = "goit-pyweb-hw-13-django"
version = "0.1.0"
description = ""
authors = ["SvetlanaRomaniuk111 <gatskosv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
pymongo = "^4.10.1"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
django-environ = "^0.12.0"
pillow = "^11.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
